Fix bug where previous video is visible momentarily

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,7 @@
     left: 0px;
     width:100vw;
     height:100vh;
+    z-index: -1;
 }
 
 #overlay {
